fixed app height issue and added gap between movies

--- a/movie-recommendations/src/components/MiddleContainer.css
+++ b/movie-recommendations/src/components/MiddleContainer.css
@@ -1,6 +1,5 @@
 .main {
   width: 80%;
-  height: 80%;
   background-color: #c4c4c4;
   margin: 0;
   border-radius: 30px;
@@ -26,7 +25,11 @@
 }
 .main .moviesContainer {
   height: 70%;
-  display: grid;
-  grid-template-columns: repeat(9, 1fr);
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  flex-flow: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
 }
